# FluxPilot-Plasma2350

./: Cargo.toml  README.md  build.rs  memory.x  rp235x_riscv.x
.cargo/: config.toml
src/: board.rs  main.rs
