[package]
name = "fluxpilot_plasma2350"
version = "0.2.0"
edition = "2024"

[dependencies]
# Cortex-M 
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"


# Embassy
embassy-executor = { version = "0.9", features = [
  "arch-cortex-m",
  "executor-thread",
  "defmt",
] }
embassy-time = { version = "0.5.0" }
embassy-rp = { version = "0.9.0", features = [
  "time-driver",
  "critical-section-impl",
  "rp235xa",
  "binary-info",
  "defmt",
] }

# Defmt Logging
defmt = "1.0.1"
defmt-rtt = "1.1.0"
embassy-sync = "0.7.2"
heapless = "0.9.2"
embassy-usb = "0.5.1"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
static_cell = "2.1.1"
smart-leds = "0.4.0"

# FluxPilot
fluxpilot-firmware = { path = "../FluxPilot/crates/fluxpilot-firmware" }
pliot = { path = "../FluxPilot/crates/pliot" }
light_machine = { path = "../FluxPilot/crates/light_machine"}
